# spuk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
docs/: ARCHITECTURE.md  PLAN.md  RELEASE.md
docs/design/: app-icon-mockups.html  main-window-mockups.html
docs/superpowers/plans/: 2026-06-16-configurable-hotkeys.md  2026-06-21-apple-speech-hybrid-engine.md  2026-06-21-dual-cmd-window-screenshot.md  2026-06-21-fn-apple-speech-engine.md
docs/superpowers/specs/: 2026-06-16-hotkey-rebind-design.md
packaging/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1  make_dmg_background.py  make_icon.py  spuk.icns  spuk.spec  spuk_launch.py
packaging/aur/: PKGBUILD  spuk.install
packaging/linux/: postinst  postrm  spuk.desktop
scripts/: check_env.py  diagnose.py
src/spuk/: .___pycache__  __init__.py  __main__.py  apple_speech.py  audio.py  config.py  core.py  fn_dictation.py  hotkey.py  hotkey_format.py  input_backend.py  languages.py  linux_input.py  live_insert.py  mac_flags_tap.py  mac_tap_heal.py  paste.py  permissions.py  postprocess.py  screenshot.py  screenshot_gesture.py  settings_store.py  transcriber.py  tray.py  ui_bar.py  ui_permissions.py  ui_window.py  updates.py
tests/: test_apple_speech.py  test_apple_speech_config.py  test_apple_speech_wiring.py  test_audio_fallback.py  test_bar_stop.py  test_config_hotkey_overlay.py  test_config_screenshot.py  test_core_async_stop.py  test_core_force_stop.py  test_core_rebind.py  test_dual_cmd_logic.py  test_fn_detection.py  test_fn_dictation.py  test_hotkey_capture.py  test_hotkey_dropped_release.py  test_hotkey_format.py  test_hotkey_handsfree.py  test_hotkey_selfheal.py  test_linux_hotkey_source.py  test_linux_input_mapping.py  test_linux_paste.py  test_live_insert.py  test_mac_flags_tap.py  test_mac_flags_tap_rearm.py  test_mac_tap_heal.py  test_mainthread_runner_qt.py  test_paste_mainthread.py  test_paste_send_shortcut.py  test_paste_shortcut.py  test_paste_type.py  test_paste_ui.py  test_permissions_linux.py  test_permissions_macos.py  test_permissions_screen_recording.py  test_permissions_ui.py  test_recorder_stop_wedge.py  test_screenshot_capture.py  test_screenshot_flow.py  test_screenshot_gesture_wiring.py  test_update_ui.py  (+1 more)
