[project]
name = "spuk"
version = "0.3.1"
description = "Private, local, free press-to-talk dictation for macOS and Windows."
readme = "README.md"
license = "MIT"
authors = [{ name = "1mp3ctz" }]
requires-python = ">=3.11,<3.13"   # 3.13/3.14 lack reliable ctranslate2 wheels in mid-2026
dependencies = [
    "faster-whisper>=1.1,<2",      # CTranslate2 Whisper; bundles PyAV so no ffmpeg binary needed
    "sounddevice>=0.5,<0.6",       # PortAudio mic capture -> raw float32 numpy
    "numpy>=1.26,<3",
    "pynput>=1.7,<2",              # global hotkey + synthetic paste (cross-platform)
    "pyperclip>=1.9,<2",           # clipboard get/set
    "pystray>=0.19,<0.20",         # cross-platform system-tray icon (macOS + Windows)
    "pillow>=10,<12",              # generate the tray icon at runtime
    "pyside6>=6.6,<7",
]

[project.scripts]
spuk = "spuk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spuk"]
