[project]
name = "spuk"
version = "1.2.2"
description = "Private, local, free press-to-talk dictation for macOS, Windows, and Linux."
readme = "README.md"
license = "MIT"
authors = [{ name = "1mp3ctz" }]
requires-python = ">=3.11,<3.13"   # 3.13/3.14 lack reliable ctranslate2 wheels in mid-2026
dependencies = [
    "faster-whisper>=1.1,<2",      # CTranslate2 Whisper; bundles PyAV so no ffmpeg binary needed
    "sounddevice>=0.5,<0.6",       # PortAudio mic capture -> raw float32 numpy
    "numpy>=1.26,<3",
    "pynput>=1.7,<2",              # global hotkey + synthetic paste (cross-platform)
    "pyperclip>=1.9,<2",           # clipboard get/set
    "pystray>=0.19,<0.20",         # cross-platform system-tray icon (macOS + Windows)
    "pillow>=10,<13",              # generate the tray icon at runtime
    "pyside6>=6.6,<7",
    # Linux only: read /dev/input for the global hotkey and inject paste via
    # /dev/uinput (works under X11 AND Wayland, unlike pynput). The marker keeps
    # it off macOS/Windows, where it can't build (it compiles against Linux input
    # headers). Import name and PyPI distribution are both 'evdev'.
    "evdev; sys_platform == 'linux'",
    # macOS only: the dual-Command screenshot gesture needs a Quartz CGEventTap
    # (flagsChanged) and Cocoa (NSWorkspace/NSPasteboard/CGWindowList). Import
    # names are 'Quartz' and 'AppKit'/'Foundation'.
    "pyobjc-framework-Quartz>=10,<12; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10,<13; sys_platform == 'darwin'",
    "pyobjc-framework-Speech>=10,<13; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=10,<13; sys_platform == 'darwin'",
]

[project.scripts]
spuk = "spuk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spuk"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
]
